# TEG_2025

./: .env.template  .gitignore  README.md  pyproject.toml
slides/1. Intro/: 0. Intro.pptx
slides/4. Graphs/: 1. Chains and graphs.pptx
slides/5. Tools and Agents/: 1. Tools and agents.pptx  3. Agentic AI - evaluation.pptx
slides/6. MCP/: 1. Functions Agents and Tools - rethinked.pptx  3. MCP vs A2A.pptx
src/1. Intro/: 1_llm_basics.py  2_Your_own_chatbot.py  notebook.ipynb  pyproject.toml
src/2. Models/1. Embeddings/: 1. embeddings_basics.py  notebook_1.ipynb  pyproject.toml
src/2. Models/2. LLMs/: 1. OpenAI - analyze the response object.py  2. Claude - analyze the response object.py  3. Different models with LangChain.py  notebook_2.ipynb  pyproject.toml
src/3. Retrieval Augmented Generation/01_basic_rag/: notebook_1.ipynb
src/3. Retrieval Augmented Generation/06_GraphRAG/: 0_setup.py
src/5. Tools and Agents/: .env copy
src/5. Tools and Agents/2_complex_agents/: 02_multi_tool_react_agent.py  README.md
src/6. MCP/: 1_direct_demo.py  2_simple_demo.py  3_mcp_client_demo.py  README.md  run_server.py
src/6. MCP/tavily_server/: tavily.py
src/6. MCP/weather_server/: pyproject.toml  weather.py
